# Marble.Framework

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CoreEngine.cpp  CorePackage.marble.pkg  Licenses.md  README.md  Renderer.cpp  __Renderer.cpp  __Renderer.h  lgtm.yml
.github/workflows/: cmake.yml
Marble.Mathematics/: Marble.Mathematics.vcxproj  Marble.Mathematics.vcxproj.filters
Marble.Mathematics/src/: Mathematics.cpp  Mathematics.h
Marble.Packager/: CMakeLists.txt
Marble.Packager/src/: Packager.cpp  Packager.h  main.cpp
Marble.Runtime.Components.Core/src/Components/: ComponentCoreStaticInit.cpp  Image.cpp  Image.h  PackageFileCore.h  Panel.cpp  Panel.h  Text.cpp  Text.h
Marble.Runtime.Components.Core/src/Drawing/: Core.cpp  Core.h
Marble.Runtime.Components.Core2D/src/Components/: Button.cpp  Button.h  ComponentCoreStaticInit.cpp  Image.cpp  Image.h  PackageFileCore.h  Panel.cpp  Panel.h  Text.cpp  Text.h
Marble.Runtime.Components.Core2D/src/Drawing/: Core.h
Marble.Runtime.CoreLib/: Marble.Runtime.CoreLib.vcxproj  Marble.Runtime.CoreLib.vcxproj.filters
Marble.Runtime.CoreLib/include/: Config.h  Marble.h
Marble.Runtime.CoreLib/include/Marble/: Entry.h
Marble.Runtime.CoreLib/src/: inc.h
Marble.Runtime.CoreLib/src/Components/: RectTransform.cpp
Marble.Runtime.CoreLib/src/Core/: Application.cpp  Application.h  CoreAPI.h  CoreEngine.cpp  CoreEngine.h  Debug.cpp  Debug.h  Display.cpp  Display.h  DsplMgmt.cpp  DsplMgmt.h  Exception.cpp  Exception.h  Input.cpp  Input.h  PackageManager.cpp  PackageManager.h  SceneManagement.cpp  SceneManagement.h  Time.cpp  Time.h
Marble.Runtime.CoreLib/src/Core/Components/: ComponentCoreStaticInit.cpp  ComponentData.cpp  ComponentData.h  Image.cpp  Image.h  PackageFileCore.h  Panel.cpp  Panel.h  RectTransform.cpp  RectTransform.h  StaticInit.cpp  Text.cpp  Text.h
Marble.Runtime.CoreLib/src/Core/EntityComponentSystem/: CoreSystem.cpp  CoreSystem.h  EngineEvent.h
Marble.Runtime.CoreLib/src/Core/Objects/: Component.cpp  Component.h  Entity.cpp  Entity.h  Object.cpp  Object.h
Marble.Runtime.CoreLib/src/Drawing/: Core.cpp  Core.h
Marble.Runtime.CoreLib/src/EntityComponentSystem/: ComponentData.cpp  ComponentData.h  EngineEvent.cpp  EngineEvent.h  EntityManagement.cpp  EntityManagement.h  RectTransform.cpp  RectTransform.h  SceneManagement.cpp  SceneManagement.h
Marble.Runtime.CoreLib/src/Extras/: Event.h  Lock.cpp  ManagedArray.h  Property.h
Marble.Runtime.CoreLib/src/Objects/: Component.cpp  Component.h  Entity.cpp  Entity.h  Object.cpp  Object.h
Marble.Runtime.CoreLib/src/Objects/internal/: Entity.def.h  Entity.nodep.h
Marble.Runtime.CoreLib/src/Rendering/: Core.cpp  Core.h  Renderer.cpp  Renderer.h
Marble.Runtime.CoreLib/src/Utility/: Event.h  Exception.h  Hash.h  Lock.h  ManagedArray.h  MemoryChunk.h  MinAllocList.h  Property.h  StaticQueue.h  TypeInfo.h
Marble.Runtime.CoreLib/src/compat/: thread
Marble.Runtime.GL/: Marble.Runtime.GL.vcxproj  Marble.Runtime.GL.vcxproj.filters
Marble.Runtime.GL/Debug/: vc142.idb
Marble.Runtime.GL/Debug/Marble.R.098183b3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Marble.Runtime.GL.lastbuildstate
Marble.Runtime.GL/src/: ShaderCompiler.cpp  ShaderCompiler.h
Marble.Runtime.GL/src/Rendering/: Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h
Marble.Runtime.GL/src/Rendering/Core/: Renderer.cpp  Renderer.h  Texture.cpp  Texture.h
Marble.Runtime.GL/src/Rendering/Utility/: ShaderUtility.cpp  ShaderUtility.h  TextureUtility.cpp  TextureUtility.h
Marble.Runtime.GL/src/Shaders/: 2DPolygon.frag.h  2DPolygon.vert.h  Textured2DPolygon.frag.h  Textured2DPolygon.vert.h
Marble.Runtime.GL/src/Shaders/configure/: 2DPolygon.frag.sc  2DPolygon.vert.sc  Textured2DPolygon.frag.sc  Textured2DPolygon.vert.sc
Marble.Tests/VisualTest.Marble.RectTransform/: main.cpp
Marble.Tools/: CMakeLists.txt
Marble.Tools/src/: Packager.cpp  packager.sc_main.cpp  packager_main.cpp
Marble.Typography/src/Font/: Font.cpp  Font.h
SDL2/: CMakeLists.txt
Sandbox/: Sandbox.vcxproj
Sandbox/src/: App.cpp
cmake/: PrecompileBuiltinShaders.cmake
dependencies/LLVM/: libomp.lib
dependencies/SDL2/: README.txt
dependencies/SDL2/docs/: README-dynapi.md  README-gesture.md  README-hg.md  README-macosx.md  README-psp.md  README-raspberrypi.md  README-touch.md
dependencies/SDL2/lib/x86/: SDL2main.lib
dependencies/_SDL2/: README-SDL.txt  WhatsNew.txt
dependencies/_SDL2/docs/: README-android.md  README-cmake.md  README-emscripten.md  README-pandora.md  README-wince.md
dependencies/_SDL2/lib/x86/: SDL2.exp  SDL2.ilk
dependencies/bgfx/include/bgfx/: defines.h
dependencies/earcut/include/mapbox/: earcut.hpp
dependencies/skarupke/: function.h
dependencies/stb/: stb_tilemap_editor.h
garbage/: CoreEngine.cpp  CoreEngine.h  CoreObjects.cpp  CoreObjects.h  EntryPoint.h  Events.h  Locked.h  ObjectThing.txt  Parallel.cpp  Parallel.h  PixelRenderer (2).cpp  PixelRenderer (2).h  PixelRenderer.cpp  PixelRenderer.h  Renderer.cpp  Renderer.h  Utils.cpp  Utils.h
